Fixed run files